--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@ https://templatemo.com/tm-591-villa-agency
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © Southern Space., Ltd. All rights reserved.<!--<a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo--></a></p>
+        <p>Copyright © Southern Space., Inc. All rights reserved.<!--<a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo--></a></p>
       </div>
     </div>
   </footer>
