--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="left-image">
-            <img src="assets/images/featured.jpg" alt="">
+<!--            <img src="assets/images/featured.jpg" alt="">-->
+            <img src="assets/images/solar4.jpg" alt="">
 <!--            <a href="property-details.html"><img src="assets/images/featured-icon.png" alt="" style="max-width: 60px; padding: 0px;"></a>-->
           </div>
         </div>
@@ -566,7 +567,7 @@
   <footer>
     <div class="container">
       <div class="col-lg-8">
-        <p>Copyright © Southern Space., Ltd. All rights reserved.
+        <p>Copyright © Southern Space., Inc. All rights reserved.
         </p>
       </div>
     </div>
