--- a/installation.html
+++ b/installation.html
@@ -296,7 +296,7 @@
 <footer class="footer-no-gap">
   <div class="container">
     <div class="col-lg-12">
-      <p>Copyright © Southern Space., Ltd. All rights reserved.
+      <p>Copyright © Southern Space., Inc. All rights reserved.
 
 <!--        Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>-->
     </div>
