--- a/property-details3.html
+++ b/property-details3.html
@@ -336,7 +336,7 @@ https://templatemo.com/tm-591-villa-agency
   <footer class="footer-no-gap">
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © Southern Space., Ltd. All rights reserved.
+        <p>Copyright © Southern Space., Inc. All rights reserved.
 <!--        -->
 <!--        Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>-->
       </div>
